# llvm-project

./: meson.build
clang/docs/: ReleaseNotes.rst
clang/include/clang/AST/: Comment.h
clang/include/clang/Basic/: DiagnosticGroups.td  LangStandards.def
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp
libcxx/src/: ostream.cpp
llvm/: CMakeLists.txt  meson.build
llvm/cmake/modules/: AddLLVM.cmake
llvm/include/llvm-c/: Analysis.h  BitReader.h  BitWriter.h  Comdat.h  Core.h  DebugInfo.h  Disassembler.h  Error.h  ErrorHandling.h  ExecutionEngine.h  ExternC.h  IRReader.h  LLJIT.h  LLJITUtils.h  Linker.h  Object.h  Orc.h  OrcEE.h  Remarks.h  Support.h  Target.h  TargetMachine.h  blake3.h  lto.h
llvm/include/llvm-c/Transforms/: PassBuilder.h
llvm/include/llvm/CodeGen/: meson.build
llvm/include/llvm/Config/: meson.build
llvm/include/llvm/ExecutionEngine/: Interpreter.h  MCJIT.h
llvm/include/llvm/Support/: TargetSelect.h
llvm/lib/Demangle/: DLangDemangle.cpp  Demangle.cpp  ItaniumDemangle.cpp  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp  RustDemangle.cpp  meson.build
llvm/lib/Demangle/pch/: stdafx.h
llvm/lib/Option/: meson.build
llvm/lib/Support/: DataExtractor.cpp  MemoryBuffer.cpp  NativeFormatting.cpp  OptimizedStructLayout.cpp  Optional.cpp  PGOOptions.cpp  Parallel.cpp  Path.cpp  PluginLoader.cpp  PrettyStackTrace.cpp  Process.cpp  Program.cpp  RISCVAttributeParser.cpp  RISCVAttributes.cpp  RISCVISAInfo.cpp  RWMutex.cpp  RandomNumberGenerator.cpp  Regex.cpp  SHA1.cpp  SHA256.cpp  ScaledNumber.cpp  ScopedPrinter.cpp  Signals.cpp  Signposts.cpp  SmallPtrSet.cpp  SmallVector.cpp  SourceMgr.cpp  SpecialCaseList.cpp  Statistic.cpp  StringExtras.cpp  StringMap.cpp  StringRef.cpp  StringSaver.cpp  SuffixTree.cpp  SuffixTreeNode.cpp  SystemUtils.cpp  TarWriter.cpp  ThreadPool.cpp  Threading.cpp  TimeProfiler.cpp  (+18 more)
llvm/lib/Support/BLAKE3/: CMakeLists.txt  meson.build
llvm/lib/Support/pch/: stdafx.h
llvm/lib/TableGen/: DetailedRecordsBackend.cpp  Error.cpp  JSONBackend.cpp  Main.cpp  Parser.cpp  Record.cpp  SetTheory.cpp  StringMatcher.cpp  TGLexer.cpp  TGParser.cpp  TableGenBackend.cpp  TableGenBackendSkeleton.cpp  meson.build
llvm/lib/TableGen/pch/: stdafx.h
llvm/utils/: meson.build
llvm/utils/TableGen/: meson.build
llvm/utils/TableGen/Basic/: meson.build
llvm/utils/TableGen/Common/: meson.build
