
src = [
    'ABIBreak.cpp',
    'AMDGPUMetadata.cpp',
    'APFixedPoint.cpp',
    'APFloat.cpp',
    'APInt.cpp',
    'APSInt.cpp',
    'ARMBuildAttrs.cpp',
    'ARMAttributeParser.cpp',
    'ARMWinEH.cpp',
    'Allocator.cpp',
    'AutoConvert.cpp',
    'Base64.cpp',
    'BalancedPartitioning.cpp',
    'BinaryStreamError.cpp',
    'BinaryStreamReader.cpp',
    'BinaryStreamRef.cpp',
    'BinaryStreamWriter.cpp',
    'BlockFrequency.cpp',
    'BranchProbability.cpp',
    'BuryPointer.cpp',
    'CachePruning.cpp',
    'Caching.cpp',
    'circular_raw_ostream.cpp',
    'Chrono.cpp',
    'COM.cpp',
    'CodeGenCoverage.cpp',
    'CommandLine.cpp',
    'Compression.cpp',
    'CRC.cpp',
    'ConvertUTF.cpp',
    'ConvertEBCDIC.cpp',
    'ConvertUTFWrapper.cpp',
    'CrashRecoveryContext.cpp',
    'CSKYAttributes.cpp',
    'CSKYAttributeParser.cpp',
    'DataExtractor.cpp',
    'Debug.cpp',
    'DebugCounter.cpp',
    'DeltaAlgorithm.cpp',
    'DivisionByConstantInfo.cpp',
    'DAGDeltaAlgorithm.cpp',
    'DJB.cpp',
    'ELFAttributeParser.cpp',
    'ELFAttributes.cpp',
    'Error.cpp',
    'ErrorHandling.cpp',
    'ExponentialBackoff.cpp',
    'ExtensibleRTTI.cpp',
    'FileCollector.cpp',
    'FileUtilities.cpp',
    'FileOutputBuffer.cpp',
    'FloatingPointMode.cpp',
    'FoldingSet.cpp',
    'FormattedStream.cpp',
    'FormatVariadic.cpp',
    'GlobPattern.cpp',
    'GraphWriter.cpp',
    'Hashing.cpp',
    'HexagonAttributeParser.cpp',
    'HexagonAttributes.cpp',
    'InitLLVM.cpp',
    'InstructionCost.cpp',
    'IntEqClasses.cpp',
    'IntervalMap.cpp',
    'JSON.cpp',
    'KnownBits.cpp',
    'LEB128.cpp',
    'LineIterator.cpp',
    'Locale.cpp',
    'LockFileManager.cpp',
    'ManagedStatic.cpp',
    'MathExtras.cpp',
    'MemAlloc.cpp',
    'MemoryBuffer.cpp',
    'MemoryBufferRef.cpp',
    'MD5.cpp',
    'MSP430Attributes.cpp',
    'MSP430AttributeParser.cpp',
    'NativeFormatting.cpp',
    'OptimizedStructLayout.cpp',
    'Optional.cpp',
    'PGOOptions.cpp',
    'Parallel.cpp',
    'PluginLoader.cpp',
    'PrettyStackTrace.cpp',
    'RandomNumberGenerator.cpp',
    'Regex.cpp',
    'RISCVAttributes.cpp',
    'RISCVAttributeParser.cpp',
    'RISCVISAInfo.cpp',
    'ScaledNumber.cpp',
    'ScopedPrinter.cpp',
    'SHA1.cpp',
    'SHA256.cpp',
    'Signposts.cpp',
    'SmallPtrSet.cpp',
    'SmallVector.cpp',
    'SourceMgr.cpp',
    'SpecialCaseList.cpp',
    'Statistic.cpp',
    'StringExtras.cpp',
    'StringMap.cpp',
    'StringSaver.cpp',
    'StringRef.cpp',
    'SuffixTreeNode.cpp',
    'SuffixTree.cpp',
    'SystemUtils.cpp',
    'TarWriter.cpp',
    'ThreadPool.cpp',
    'TimeProfiler.cpp',
    'Timer.cpp',
    'ToolOutputFile.cpp',
    'Twine.cpp',
    'TypeSize.cpp',
    'Unicode.cpp',
    'UnicodeCaseFold.cpp',
    'UnicodeNameToCodepoint.cpp',
    'UnicodeNameToCodepointGenerated.cpp',
    'VersionTuple.cpp',
    'VirtualFileSystem.cpp',
    'WithColor.cpp',
    'YAMLParser.cpp',
    'YAMLTraits.cpp',
    'raw_os_ostream.cpp',
    'raw_ostream.cpp',
    'raw_socket_stream.cpp',
    'regcomp.c',
    'regerror.c',
    'regexec.c',
    'regfree.c',
    'regstrlcpy.c',
    'xxhash.cpp',
    'Z3Solver.cpp',

    'Atomic.cpp',
    'DynamicLibrary.cpp',
    'Errno.cpp',
    'Memory.cpp',
    'Path.cpp',
    'Process.cpp',
    'Program.cpp',
    'RWMutex.cpp',
    'Signals.cpp',
    'Threading.cpp',
    'Valgrind.cpp',
    'Watchdog.cpp',
]

args = cpp.get_supported_arguments(
    '-Werror=global-constructors',
    '/wd4244',
    '/wd4146',
    '/wd4291',
    '/wd4319',
    '/wd4267'
)

deps = [
    demangle_dep,
    cpp.find_library('psapi'),
    cpp.find_library('ws2_32'),
]

lib_support = static_library('LLVMSupport', src,
    include_directories : [ inc, 'pch' ],
    dependencies : deps,
    cpp_args : args,
    cpp_pch : 'pch/stdafx.h',
    install : true
)

support_dep = declare_dependency(
    include_directories : inc,
    link_with : lib_support
)
